# gpu-dispatcher-api

./: .env.example  README.md  develop.md  main.py  pyproject.toml
backend/: __init__.py  main.py
cli/: __init__.py  main.py  utils.py
frontend/: .env.development  .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
