[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-dispatcher-api"
version = "0.1.0"
description = "SageProxy: FastAPI backend + React frontend + SageCLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "boto3>=1.28",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
sagecli = "cli.main:main"

[tool.setuptools]
packages = ["backend", "cli"]
