[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-dispatcher-api"
version = "0.1.0"
description = "轻量 GPU 实例调度 REST API（EC2 Broker）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "boto3>=1.28",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["main"]
